DTSCCI-269 Clean up code smell